enable functionality to fetch favourites superheroes

--- a/favourites.html
+++ b/favourites.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Favourites Superhero</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Local css -->
@@ -18,7 +18,7 @@
     <main>
       <h1>Favourite Heroes</h1>
       <div id="favourites-container">
-        <div class="fav-item">
+        <!-- <div class="fav-item">
           <img
             src="https://i.pinimg.com/originals/21/4d/dd/214ddd19794046c4ff7c5b1d0c3d5f3c.jpg"
           />
@@ -26,37 +26,10 @@
             <span>Batman</span>
             <button>Add To Favourites</button>
           </div>
-        </div>
-        <div class="fav-item">
-          <img
-            src="https://i.pinimg.com/originals/21/4d/dd/214ddd19794046c4ff7c5b1d0c3d5f3c.jpg"
-          />
-          <div class="hero-info">
-            <span>Batman</span>
-            <button>Add To Favourites</button>
-          </div>
-        </div>
-        <div class="fav-item">
-          <img
-            src="https://i.pinimg.com/originals/21/4d/dd/214ddd19794046c4ff7c5b1d0c3d5f3c.jpg"
-          />
-          <div class="hero-info">
-            <span>Batman</span>
-            <button>Add To Favourites</button>
-          </div>
-        </div>
-        <div class="fav-item">
-          <img
-            src="https://i.pinimg.com/originals/21/4d/dd/214ddd19794046c4ff7c5b1d0c3d5f3c.jpg"
-          />
-          <div class="hero-info">
-            <span>Batman</span>
-            <button>Add To Favourites</button>
-          </div>
-        </div>
+        </div> -->
       </div>
     </main>
   </body>
   <!-- local JavaScript -->
-  <script type="text/javascript" src="./hero.js"></script>
+  <script type="text/javascript" src="./favourites.js"></script>
 </html>
