--- a/index.html
+++ b/index.html
@@ -16,20 +16,15 @@
           value=""
           id="search-hero"
         />
-        <div id="search-results">
-          <!-- <div class="search-result">
-            <img
-              src="https://i.pinimg.com/originals/21/4d/dd/214ddd19794046c4ff7c5b1d0c3d5f3c.jpg"
-              alt="search-pic"
-            />
-            <div class="hero-info">
-              <span>Batman</span>
-              <button>Add To Favourites</button>
-            </div>
-          </div> -->
-        </div>
+        <div id="search-results"></div>
       </div>
-      <button id="fvrt-btn">Favourites</button>
+      <button id="fvrt-btn" onclick="location.href='favourites.html'">
+        Favourites
+      </button>
+    </div>
+    <div id="about-app">
+      Hunt your favourite SuperHeroes and Villians from all universes under a
+      single App!
     </div>
   </body>
   <!-- local JavaScript -->
