--- a/hero.html
+++ b/hero.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>SuperHero</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Local css -->
